# acrobat-plugin-cmake-template

./: CMakeLists.txt
lib/: CMakeLists.txt
lib/acrobat-sdk/: CMakeLists.txt
lib/acrobat-sdk/Headers/API/: AVCalls.h  AVExpT.h  AVProcs.h  CorCalls.h
lib/acrobat-sdk/PIBrokerSDK/API/: SourceCodeInfo.txt
lib/acrobat-sdk/PIBrokerSDK/API/Public/sandboxpisdk/libs/debug/: sandbox_pisdk_client.lib  sandbox_pisdk_server.lib
lib/acrobat-sdk/PIBrokerSDK/API/Public/sandboxpisdk/libs/release/: sandbox_pisdk_client.lib  sandbox_pisdk_server.lib
lib/acrobat-sdk/Tools/Reader-enabling Tools/win64/: KeyPair  PublicKey
src/: CMakeLists.txt
